# OpenScrub

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  Dockerfile.intel  LICENSE  NOTICE  PLATES.md  README.md  SECURITY.md  ca_profile.xml  face_models.json  fetch_plate_models.py  install.py  openscrub.py  openscrub_gui.py  openscrub_setup.py  openscrub_update.py  openscrub_vault.py  openscrub_web.py  person_models.json  plate_models.json  pyproject.toml  requirements.txt  test_openscrub.py  zones_ui.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-image.yml  opencv-cuda-base.yml  publish.yml  windows-installer.yml
assets/fonts/: OFL-NOTE.txt
deploy/: README.md
deploy/caprover/: openscrub.yml
deploy/casaos/: docker-compose.yml
deploy/coolify/: openscrub.yaml
deploy/portainer/: template.json
deploy/runtipi/openscrub/: config.json  docker-compose.json  metadata-description.md
deploy/truenas/: app.yaml  docker-compose.yml
deploy/umbrel/openscrub/: docker-compose.yml  umbrel-app.yml
deploy/winget/: AustinMabry.OpenScrub.installer.yaml  AustinMabry.OpenScrub.locale.en-US.yaml  AustinMabry.OpenScrub.yaml
docker/: Dockerfile.cuda.opencv-base  Dockerfile.opencv-cuda
templates/: openscrub-nvidia.xml  openscrub.xml
tools/: make_icons.py  make_wordmark.py
unraid/: openscrub-cuda.xml  openscrub.xml
windows/: build_installer.bat  installer.iss  openscrub.spec
