[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OpenScrub"
dynamic = ["version"]
description = "Local, GPU-accelerated redaction for video and screen recordings — blur, black-box, or mosaic faces, names, and any regex-matchable PII, with human review."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Austin Mabry" }]
keywords = [
    "redaction", "video-redaction", "face-blur", "anonymization",
    "screen-recording", "pii", "phi", "privacy", "hipaa", "gdpr",
    "ocr", "opencv", "ffmpeg",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "opencv-python",
    "numpy",
    "rapidfuzz",
    "pytesseract",
    "pillow",
    "flask",
    "pyyaml",
    "cryptography",
    # Production WSGI server with TLS for the web UI (Flask dev-server
    # fallback exists, but ships with the package so pip users get it).
    "cheroot>=10.0",
]

[project.optional-dependencies]
# Named-entity name detection extra. spaCy is heavy, so it's opt-in; the core
# detectors (regex categories + face detection) work fine without it.
ner = ["spacy>=3.7"]
all = ["spacy>=3.7"]

[project.urls]
Homepage = "https://github.com/austinmabry/OpenScrub"
Repository = "https://github.com/austinmabry/OpenScrub"
Issues = "https://github.com/austinmabry/OpenScrub/issues"

[project.scripts]
# `openscrub` runs the CLI engine; `openscrub-web` starts the web UI.
openscrub = "openscrub:main"
openscrub-web = "openscrub_web:main"

[tool.hatch.version]
# Single source of truth: the VERSION = "x.y.z" line in openscrub.py. A release
# just needs that line bumped (matches your standing version-bump delivery rule).
path = "openscrub.py"
pattern = "VERSION = \"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
include = [
    "openscrub.py",
    "openscrub_web.py",
    "zones_ui.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "openscrub.py",
    "openscrub_web.py",
    "zones_ui.py",
    "install.py",
    "requirements.txt",
    "README.md",
    "LICENSE",
    "test_openscrub.py",
]
